#comment implementing the tier creation

--- a/WebContent/CreationContrat.xhtml
+++ b/WebContent/CreationContrat.xhtml
@@ -1,4 +1,4 @@
-
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
@@ -38,18 +38,16 @@
 				<h:form id="CreationContrat" styleClass="form-horizontal">
 
 	<div class="form-group">
-						<h:outputLabel value="Tier"
-							styleClass="text-left col-sm-2" />
+	<h:outputLabel value="Tier"	styleClass="text-left col-sm-2" />
 						<div class="col-sm-10">
 						<div class="col-sm-10 no-gutters" style="padding:0px !important;">
 							<h:inputText  value="#{CreationContrat.tiers.NAMETIER}"
-								styleClass="form-control pull-left" disbaled="true" /></div>
+								styleClass="form-control pull-left" disbaled="true" />
+						</div>								
 	<div class="col-sm-2"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
   Launch demo modal
 </button></div>
            <ui:include src="findTier.xhtml" />
-   
-
 						</div>
 					</div>
 
