#comment implementing the delete tier mechanism

--- a/WebContent/CreationTiers.xhtml
+++ b/WebContent/CreationTiers.xhtml
@@ -41,7 +41,7 @@ tbody td {
 							styleClass="text-left col-sm-2" ></h:outputLabel>
 						<div class="col-sm-10">
 						<div class="col-sm-10 no-gutters" >
-						<h:inputText  value="#{CreationTier.NAMETIER}" styleClass="form-control pull-left" ></h:inputText>
+						<h:inputText  value="#{CreationTier.NAMETIER}"  style="padding:0px;" styleClass="form-control pull-left" ></h:inputText>
 						</div>
 						</div>
 						</div>
@@ -51,7 +51,7 @@ tbody td {
 							styleClass="text-left col-sm-2" ></h:outputLabel>
 						<div class="col-sm-10">
 						<div class="col-sm-10 no-gutters" >
-						<h:inputText  value="#{CreationTier.PRENOMTIER}" styleClass="form-control pull-left" ></h:inputText>
+						<h:inputText  value="#{CreationTier.PRENOMTIER}" style="padding:0px;" styleClass="form-control pull-left" ></h:inputText>
 						</div>
 						</div>
 						</div>
@@ -61,7 +61,7 @@ tbody td {
 							styleClass="text-left col-sm-2" ></h:outputLabel>
 						<div class="col-sm-10">
 						<div class="col-sm-10 no-gutters" >
-						<h:inputText  value="#{CreationTier.CINTIER}" styleClass="form-control pull-left" ></h:inputText>
+						<h:inputText  value="#{CreationTier.CINTIER}" style="padding:0px;" styleClass="form-control pull-left" ></h:inputText>
 						</div>
 						</div>
 						</div>
@@ -71,7 +71,7 @@ tbody td {
 							styleClass="text-left col-sm-2" ></h:outputLabel>
 						<div class="col-sm-10">
 						<div class="col-sm-10 no-gutters" >
-						<h:inputText  value="#{CreationTier.ADRESSETIER}" styleClass="form-control pull-left" ></h:inputText>
+						<h:inputText  value="#{CreationTier.ADRESSETIER}" style="padding:0px;" styleClass="form-control pull-left" ></h:inputText>
 						</div>
 						</div>
 						</div>
