--- a/WebContent/TierList.xhtml
+++ b/WebContent/TierList.xhtml
@@ -5,7 +5,10 @@
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 
                    xmlns:p="http://primefaces.org/ui">
+                   
                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  
+  <h:form>
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -14,6 +17,7 @@
           <span aria-hidden="true"></span>
         </button>
       </div>
+      
     <div class="modal-body">
 <h:dataTable value = "#{CreationTier.allTiers}" var = "tier"
 >
@@ -37,12 +41,19 @@
       <f:facet name = "header">CIN</f:facet>
        #{tier.CINTIER}
    </h:column>
+   
+   <h:column>
+      <f:facet name = "header">Delete</f:facet>
+		<h:commandButton value="Delete" action="#{CreationTier.deleteTier(tier)}" styleClass="btn btn-default" />
+   </h:column>
 </h:dataTable>
+
 </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
+  </h:form>
 </div>
 	</ui:composition>
