--- a/WebContent/CreationContrat.xhtml
+++ b/WebContent/CreationContrat.xhtml
@@ -29,7 +29,9 @@
 </h:head>
 <h:body>
 <div class="navbar navbar-inverse">
-			<div class="container"><div class="navbar-brand">Nouveaux contrat</div></div>
+			<div class="container"><div class="navbar-brand">Nouveaux contrat</div> <div class="col-md-10 pull-right">
+			<ui:include src="menu.xhtml" />
+			</div></div>
 		</div>
 	<div class="container">
 	
