--- a/WebContent/CreationContrat.xhtml
+++ b/WebContent/CreationContrat.xhtml
@@ -43,7 +43,7 @@
 	<h:outputLabel value="Tier"	styleClass="text-left col-sm-2"  />
 						<div class="col-sm-10">
 						<div class="col-sm-11 no-gutters" style="padding:0px !important;">
-							<h:inputText  value="#{CreationContrat.tiers.NAMETIER}"
+							<h:inputText readonly="true" value="#{CreationContrat.tiers.NAMETIER}"
 								styleClass="form-control pull-left" disbaled="true" />
 						</div>								
 	<div class="col-sm-1" style="padding:0px;"><button type="button" class="btn btn-primary pull-right" data-toggle="modal" data-target="#exampleModal">
