--- a/WebContent/findTier.xhtml
+++ b/WebContent/findTier.xhtml
@@ -32,7 +32,7 @@
 		<h:outputLabel value="Tier List"
 		styleClass="text-left " style="padding-left:15px;" />
 						<div class="col-sm-12">						
-							<h:selectOneMenu id="selectTier" value="#{CreationContrat.tiers}" styleClass="form-control" >
+							<h:selectOneMenu readonly="#{CreationContrat.updateFindTier}" id="selectTier" value="#{CreationContrat.tiers}" styleClass="form-control" >
 								<f:selectItems  value="#{CreationContrat.searchedTier}" var="tier" itemValue="#{tier}" itemLabel="#{tier[3]}" />
 								<h:message for="selectTier" />
 							</h:selectOneMenu>
