--- a/WebContent/findTier.xhtml
+++ b/WebContent/findTier.xhtml
@@ -32,8 +32,8 @@
 		<h:outputLabel value="Tier List"
 		styleClass="text-left " style="padding-left:15px;" />
 						<div class="col-sm-12">						
-							<h:selectOneMenu readonly="#{CreationContrat.updateFindTier}" id="selectTier" value="#{CreationContrat.tiers}" styleClass="form-control" >
-								<f:selectItems  value="#{CreationContrat.searchedTier}" var="tier" itemValue="#{tier}" itemLabel="#{tier[3]}" />
+							<h:selectOneMenu readonly="#{CreationContrat.updateFindTier}" disabled="#{CreationContrat.updateFindTier}" id="selectTier" value="#{CreationContrat.tiers}" styleClass="form-control" >
+								<f:selectItems  value="#{CreationContrat.searchedTier}" var="tier" itemValue="#{tier}" itemLabel="#{tier[3]} #{tier[4]}" />
 								<h:message for="selectTier" />
 							</h:selectOneMenu>
 	</div>
