--- a/WebContent/ProduitManagement.xhtml
+++ b/WebContent/ProduitManagement.xhtml
@@ -18,10 +18,10 @@
 		<title>Configuration des produits</title>
 	</h:head>
 	<h:body>
-		<div class="navbar navbar-inverse">
-			<div class="container">
-				<div class="navbar-brand">Configuration des produits</div>
-			</div>
+	<div class="navbar navbar-inverse">
+			<div class="container"><div class="navbar-brand">Config des produits</div> <div class="col-md-10 pull-right">
+			<ui:include src="menu.xhtml" />
+			</div></div>
 		</div>
 		<div class="container">
 
