--- a/WebContent/ProduitManagement.xhtml
+++ b/WebContent/ProduitManagement.xhtml
@@ -16,6 +16,14 @@
 		<h:outputScript library="js" name="jquery-3.4.1.min.js" target="head" />
 		<h:outputScript library="js" name="bootstrap.min.js" target="head" />
 		<title>Configuration des produits</title>
+				<style>
+		.form-group {
+    margin-bottom: 15px;
+    display: block;
+    float: left;
+    width: 100%;
+}
+		</style>
 	</h:head>
 	<h:body>
 	<div class="navbar navbar-inverse">
@@ -24,48 +32,59 @@
 			</div></div>
 		</div>
 		<div class="container">
-
 			<div class="row">
 				<div class="col-xs-12 col-xs-updated">
 					<h:form id="CreationContrat" styleClass="form-horizontal">
 						<div class="form-group">
-							<div class="col-sm-10">
+							<div class="col-sm-12">
 								<h:dataTable styleClass="table"
-									value="#{ConfigurationProduit.produits}" var="prod">
+									value="#{ConfigurationProduit.produits}" var="prod">					
 									<h:column styleClass="col">
-										<f:facet name="header">Description du produit</f:facet>
-									#{prod.DESCRIPTION}
+										<f:facet name="header">Description du produit</f:facet>		
+									      #{ConfigurationProduit.setDescription(prod.DESCRIPTION)}
+			<h:inputText  value="#{ConfigurationProduit.description}" rendered="#{prod.iseditable}"  style="padding:0px;" styleClass="form-control pull-left" >
+			</h:inputText>    				
+    		<h:outputText value="#{prod.DESCRIPTION}" rendered="#{not prod.iseditable}" />    		
 									 </h:column>
 									<h:column styleClass="col">
-										<f:facet name="header">Taux d'intérêt</f:facet>
-									 #{prod.TAUXCOMM}
+										<f:facet name="header">Taux d'intérêt</f:facet>		
+									      #{ConfigurationProduit.setTauxcomm(prod.TAUXCOMM)}			
+			<h:inputText  value="#{ConfigurationProduit.tauxcomm}" rendered="#{prod.iseditable}"  style="padding:0px;" styleClass="form-control pull-left" >
+
+			</h:inputText>    				
+    		<h:outputText value="#{prod.TAUXCOMM} %" rendered="#{not prod.iseditable}" />
+									 </h:column>									 
+										<h:column styleClass="col">
+										<f:facet name="header">Taux TVA</f:facet>		
+									      #{ConfigurationProduit.setTauxcomm(prod.TAUXTVA)}			
+			<h:inputText  value="#{ConfigurationProduit.tauxtva}" rendered="#{prod.iseditable}"  style="padding:0px;" styleClass="form-control pull-left" >
+			</h:inputText>    				
+    		<h:outputText value="#{prod.TAUXTVA} %" rendered="#{not prod.iseditable}" />
 									 </h:column>
 									<h:column>
-										<f:facet name="header">Opération</f:facet>
-										<p:commandButton value="Modifier"
+										<f:facet name="header">Supprimer</f:facet>
+											<h:commandButton value="Delete"
+											styleClass="btn btn-danger"
+											actionListener="#{ConfigurationProduit.delete(prod)}" 
+											process="@this" update=":Modifierproduit"/>									
+									</h:column>									
+										<h:column>
+										<f:facet name="header">Modifier</f:facet>
+										<h:commandButton value="Modifier"
 											styleClass="btn btn-default"
-											oncomplete="pop.show()"
+											actionListener="#{ConfigurationProduit.setProductEditable(prod)}" 
+											process="@this" update=":Modifierproduit" rendered="#{not prod.iseditable}" />
+										<h:commandButton value="Update"
+											styleClass="btn btn-default"
 											actionListener="#{ConfigurationProduit.modifierProduit(prod)}" 
-											process="@this" update=":Modifierproduit"/>
+											process="@this" update=":Modifierproduit" rendered="#{prod.iseditable}" />
 									</h:column>
 								</h:dataTable>
 							</div>
 						</div>
 					</h:form>
 				</div>
-
-			</div>
+			</div>		
 		</div>
-		
-						<p:dialog widgetVar="pop" header="Account Edit" >
-					<h:form id="Modifierproduit" styleClass="form-horizontal">
-						<p:panelGrid columns="2">
-							<h:inputText value="#{ConfigurationProduit.produit.DESCRIPTION}" />
-							<h:inputText value="#{ConfigurationProduit.produit.TAUXCOMM}" />
-							<h:commandButton type="button" value="Modifier"
-								styleClass="btn btn-default" />
-						</p:panelGrid>
-					</h:form>
-				</p:dialog>
 	</h:body>
 </ui:composition>
