--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -40,7 +40,9 @@ nav.navbar.navbar-inverse {
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Product Management
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li>			<a href="ProduitManagement.xhtml">Config des produits</a>
+          <li>			<a href="ProduitManagement.xhtml">Delete / Update</a>
+</li>
+          <li>			<a href="creationProduit.xhtml">Creation</a>
 </li>
         </ul>
       </li>
@@ -49,16 +51,16 @@ nav.navbar.navbar-inverse {
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tier Management
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li>			<a href="CreationTiers.xhtml">Creation Tier</a>
+          <li>			<a href="CreationTiers.xhtml">Creation</a>
 </li>
-          <li><a href="ListTierPage.xhtml">Tier List</a></li>
+          <li><a href="ListTierPage.xhtml">Delete / Update</a></li>
         </ul>
       </li>
    <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Contract Mnagement
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li>						<a href="CreationContrat.xhtml">Creation Contrat</a>
+          <li>						<a href="CreationContrat.xhtml">Creation</a>
 
 </li>
         </ul>
