--- a/WebContent/contractConsultation.xhtml
+++ b/WebContent/contractConsultation.xhtml
@@ -56,7 +56,10 @@
 								 			<h:column styleClass="col">
 										<f:facet name="header">Facture list</f:facet>					
 					
-    		<h:commandButton  value="Go To  Factures" />
+    		                         <h:commandLink action="CreationContrat.updateFactureContractNumber()" 
+    		                         href="Facturation.xhtml"  styleClass="btn btn-default"
+    		                         value="Go To  Factures" >
+    		                         </h:commandLink>
 									 </h:column>
 								</h:dataTable>
 							</div>
