--- a/WebContent/CreationTiers.xhtml
+++ b/WebContent/CreationTiers.xhtml
@@ -91,7 +91,9 @@ padding:0px !important;
 						</div>
 							<div class="form-group">
 						<div class="col-sm-offset-2 col-sm-10">
-							<h:commandButton value="Create" action="#{CreationTier.createTier()}" styleClass="btn btn-danger" />
+							<h:commandButton value="Create" action="#{CreationTier.createTier()}" styleClass="btn btn-danger">
+							<f:ajax execute="@form"></f:ajax>
+							</h:commandButton>
 						</div> 
 					</div>
 						</h:form>
