--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -40,10 +40,11 @@ nav.navbar.navbar-inverse {
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Product Management
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
+            <li>			<a href="creationProduit.xhtml">Creation</a>
+</li>
           <li>			<a href="ProduitManagement.xhtml">Delete / Update</a>
 </li>
-          <li>			<a href="creationProduit.xhtml">Creation</a>
-</li>
+      
         </ul>
       </li>
       
@@ -61,6 +62,13 @@ nav.navbar.navbar-inverse {
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li>						<a href="CreationContrat.xhtml">Creation</a>
+
+</li>
+          <li>						<a href="contractConsultation.xhtml">Consultation</a>
+
+</li>
+
+<li>						<a href="Facturation.xhtml">Facturation</a>
 
 </li>
         </ul>
