#comment updating the project

--- a/WebContent/contractConsultation.xhtml
+++ b/WebContent/contractConsultation.xhtml
@@ -56,9 +56,9 @@
 								 			<h:column styleClass="col">
 										<f:facet name="header">Facture list</f:facet>					
 					
-    		                         <h:commandLink action="CreationContrat.updateFactureContractNumber()" 
-    		                         href="Facturation.xhtml"  styleClass="btn btn-default"
-    		                         value="Go To  Factures" >
+    		                         <h:commandLink action="CreationContrat.updateSelectedContractId(con)" 
+    		                         href="echeances.xhtml"  styleClass="btn btn-default"
+    		                         value="Echeances" >
     		                         </h:commandLink>
 									 </h:column>
 								</h:dataTable>
