--- a/WebContent/CreationContrat.xhtml
+++ b/WebContent/CreationContrat.xhtml
@@ -48,6 +48,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-xs-updated">
 				<h:form id="CreationContrat" styleClass="form-horizontal">
+				<h:message for="CreationContrat" style="color: red;   margin: 15px 0px;  display: block; font-weight: bold;" />				
 	<div class="form-group">
 	<h:outputLabel value="Tier"	styleClass="text-left col-sm-2"  />
 						<div class="col-sm-10">
@@ -90,15 +91,14 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<h:outputLabel value="Date Fin"
+						<h:outputLabel value="Duration in months"
 							styleClass="text-left  col-sm-2" />
 						<div class="col-sm-10">
-							<h:inputText required="true" id="dateFin" value="#{CreationContrat.dateFind}"
+							<h:inputText required="true" id="duration" value="#{CreationContrat.DUREE}"
 								styleClass="form-control" >
 								<f:validateRequired />	
-								<f:convertDateTime type="date" dateStyle="short"  pattern="yyyy-mm-dd"  />
 								</h:inputText>
-								<h:message for="dateFin" style="color:red" />	
+								<h:message for="duration" style="color:red" />	
 					
 						</div>
 					
