--- a/WebContent/ProduitManagement.xhtml
+++ b/WebContent/ProduitManagement.xhtml
@@ -35,6 +35,7 @@
 			<div class="row">
 				<div class="col-xs-12 col-xs-updated">
 					<h:form id="CreationContrat" styleClass="form-horizontal">
+					<h:message for="ConfigurationProduit" style="color: red;   margin: 15px 0px;  display: block; font-weight: bold;" />	
 						<div class="form-group">
 							<div class="col-sm-12">
 								<h:dataTable styleClass="table"
