#comment changing style

--- a/WebContent/contractConsultation.xhtml
+++ b/WebContent/contractConsultation.xhtml
@@ -71,7 +71,7 @@
 							</div>
 						</div>
 						   <h:commandButton action="#{CreationContrat.setShowEcheancePanel(false)}"  rendered="#{CreationContrat.showEcheancePanel}"
-    		                          styleClass="btn btn-default"
+    		                          styleClass="btn btn-danger"
     		                         value="back" execute="@form" render=":consultContract:echeanceList;:consultContract:contractList" update=":consultContract:echeanceList;:consultContract:contractList" >
     		                     
     		                         </h:commandButton>
