--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -65,6 +65,11 @@ nav.navbar.navbar-inverse {
        <li>						<a href="Facturation.xhtml">Facturation</a>
 
 </li>
+
+    <li>
+    <a href="CreationFacture.xhtml">Creation Facturation</a>
+
+</li>
         </ul>
       </li>
       
