fixing style issue

--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -28,7 +28,9 @@ nav.navbar.navbar-inverse {
     margin-bottom: 0px;
     border: none;
 }
-     
+     .dropdown-menu>li>a{
+         padding: 3px 5px !important;
+     }
       </style>
       
       <nav class="navbar navbar-inverse">
